# cargo-upgrade

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  TODO.rst  cargo-upgrade.rs  go  rust-toolchain.toml
cargo-upgrade/: cargo_upgrade.rs
src/: api.rs  api2.rs  cli.rs  errors.rs  lib.rs  main.rs  old_api.rs  progress.rs  util.rs
src/api/: client.rs  defaults.rs  models.rs  util.rs
src/api/models/: encodable_audit_action.rs  encodable_crate.rs  encodable_crate_links.rs  encodable_error.rs  encodable_public_user.rs  encodable_version.rs  encodable_version_links.rs  from_response.rs  mod.rs  search_result.rs  trustpub_data.rs  versions_result.rs
src/models/: cookie_jar.rs  http_request.rs  http_response.rs  http_version.rs  manifest.rs  mod.rs  object_info.rs  url.rs
