[package]
name = "cargo-upgrade"
version = "0.0.1"
description = "cargo-upgrade command-line"
readme = "README.md"
homepage = "https://crates.io/crates/cargo-upgrade"
license = "MIT"
edition = "2024"
autoexamples = false
autobenches = false

[lib]
name = "cargo_upgrade"
path = "src/lib.rs"
bench = false

[[bin]]
name = "cargo-upgrade"
path = "src/main.rs"

[dependencies]
cargo = "0.97.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env", "string", "unicode", "wrap_help"] }
crates-io = "0.40.19"
curl = "0.4.50"
dumbeq = "0.1.2"
http = "1.4.2"
indicatif = "0.18.5"
iocore = "3.1.0"
percent-encoding = "2.3.2"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["blocking", "gzip", "hickory-dns", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.9.2"
toml_edit = { version = "0.23.2", features = ["serde"] }
url = "2.5.8"
